@@ -87,6 +87,8 @@ Other Changes:
 - Backends:
   - GLFW: fixed building on Linux platforms where Wayland headers
     are not available. (#9024, #8969, #8921, #8920) [@jagot]
+  - GLFW: lower minimum requirement from GLFW 3.1 to GLFW 3.0. Though
+    a recent version e.g GLFW 3.4 is highly recommended! (#9055) [@Clownacy]
   - SDL3: fixed Platform_OpenInShellFn() return value (the return value
     was unused in core but might be used by a direct caller). (#9027) [@achabense]
   - SDL3: fixed an issue with missing characters events when an already active text
